Adjust back button on help page, coloring, and margin/spacing issues

--- a/src/views/HelpPage/HelpPage.styl
+++ b/src/views/HelpPage/HelpPage.styl
@@ -45,7 +45,7 @@
 
 .HelpNav h2
     font-size 1.5rem
-    margin-bottom 10px
+    margin-top 4rem
     color black
 
 .HelpNav ul
@@ -60,7 +60,7 @@
     margin-bottom 0
 
 .HelpNav li button
-    background #fff8e6
+    background rgb(221, 237, 243)
     border none
     width 100%
     padding 10px
@@ -82,7 +82,6 @@
 
 .HelpContent h2
     font-size 2rem
-    margin-bottom 10px
     color #333
 
 .HelpContent p
